--- a/views/pages/admin_user_page.html
+++ b/views/pages/admin_user_page.html
@@ -27,7 +27,7 @@
     <table class="min-w-full text-[11px] md:text-sm
                   border border-gray-200 rounded-lg overflow-hidden">
 
-      <thead class="bg-gray-100">
+      <thead class="bg-gray-100 text-gray-700">
         <tr>
           <th class="p-2 text-center w-10">No</th>
           <th class="p-2 text-left">Nama</th>
@@ -52,7 +52,7 @@
             {{ $u.Username }}
           </td>
 
-          <td class="hidden md:table-cellp-2 text-center">
+          <td class="hidden md:table-cell p-2 text-center">
             {{ $u.Jabatan }}
           </td>
 
