--- a/views/partials/absensi_bulanan_table.html
+++ b/views/partials/absensi_bulanan_table.html
@@ -41,7 +41,7 @@
 
       <div class="overflow-x-auto border rounded-lg shadow-sm">
 
-      <table class="min-w-[1600px] text-[11px] border-collapse">
+      <table class="min-w-full text-[11px] border-collapse">
 
         <!-- HEADER -->
         <thead class="sticky-header">
