--- a/views/pages/siswa_page.html
+++ b/views/pages/siswa_page.html
@@ -116,7 +116,7 @@
           </td>
 
           <td class="py-1.5 px-2 md:p-2 text-center">
-            {{ $s.Kelas }} {{ $s.Jurusan }}
+            {{ $s.Kelas.Nama }} {{ $s.Jurusan.Nama }}
           </td>
 
           <td class="hidden md:table-cell py-1.5 px-2 md:p-2 text-center">
