--- a/views/partials/absensi_bulanan_table.html
+++ b/views/partials/absensi_bulanan_table.html
@@ -38,7 +38,7 @@
   <div
     id="absensi-bulanan"
     hx-get="/absensi/bulanan/table"
-    hx-trigger="refresh"
+    hx-trigger="reload"
     hx-swap="outerHTML"
     
     >
