--- a/views/modals/tambah_siswa.html
+++ b/views/modals/tambah_siswa.html
@@ -122,7 +122,7 @@
       <div>
         <label class="block text-gray-600 mb-1">Jurusan</label>
         <select
-          name="kelas"
+          name="jurusan"
           class="w-full border rounded-md px-3 py-2"
         >
         <option value="">-- Jurusan --</option>
