--- a/views/partials/absensi_bulanan_table_edit.html
+++ b/views/partials/absensi_bulanan_table_edit.html
@@ -10,7 +10,7 @@
     hx-get="/absensi/bulanan/table?bulan={{ .SelectedMonth }}&tahun={{ .SelectedYear }}"
     hx-target="#absensi-bulanan"
     hx-swap="innerHTML"
-    class="px-3 py-1 rounded bg-red-700 text-white text-xs hover:bg-red-800"
+    class="px-3 py-1 rounded bg-green-500 text-white text-xs hover:bg-green-800"
   >
     ✔️ Selesai Edit
   </button>
